--- a/.github/workflows/forward.yml
+++ b/.github/workflows/forward.yml
@@ -1,20 +1,15 @@
-name: Trendminer转发到企业微信
+name: Trendminer转发到企业微信（最终版）
 on:
   workflow_dispatch:
     inputs:
       tm_data:
-        description: "Trendminer原始数据"
+        description: "Trendminer数据"
         required: true
         type: string
-  repository_dispatch:
-    types: [tm_trigger]
 
 jobs:
   run-forward:
     runs-on: ubuntu-latest
-    permissions:
-      actions: write
-      contents: read
     steps:
       - name: 拉取仓库代码
         uses: actions/checkout@v4
@@ -32,12 +27,8 @@ jobs:
           npm start &
           sleep 5
 
-      - name: 转发消息到服务
+      - name: 转发消息
         env:
-          TM_DATA: ${{ github.event.inputs.tm_data || toJSON(github.event.client_payload) }}
+          TM_DATA: ${{ github.event.inputs.tm_data }}
         run: |
-          curl -X POST \
-            -H "Content-Type: application/json" \
-            -d "{\"tm_data\": \"$TM_DATA\"}" \
-            http://localhost:3000/
-          echo -e "\n转发完成"
+          curl -X POST -H "Content-Type: application/json" -d "{\"tm_data\":\"$TM_DATA\"}" http://localhost:3000/
