--- a/.github/workflows/forward.yml
+++ b/.github/workflows/forward.yml
@@ -1,9 +1,12 @@
 name: Trendminer转发到企业微信（最终版）
+# 触发方式：匹配前端的tm_trigger事件 + 保留手动触发（双重触发）
 on:
-  workflow_dispatch:
+  repository_dispatch:
+    types: [tm_trigger] # 前端转发的事件类型
+  workflow_dispatch: # 保留手动触发，方便测试
     inputs:
       tm_data:
-        description: "Trendminer数据"
+        description: "Trendminer数据（手动测试用）"
         required: true
         type: string
 
@@ -18,17 +21,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm' # 缓存依赖，加快运行速度
 
       - name: 安装依赖
         run: npm install
 
-      - name: 启动Node服务
+      - name: 启动Node服务并后台运行
         run: |
           npm start &
-          sleep 5
+          sleep 3 # 缩短等待时间，足够服务启动
 
-      - name: 转发消息
+      - name: 转发消息到Node服务
         env:
-          TM_DATA: ${{ github.event.inputs.tm_data }}
+          # 优先取repository_dispatch的参数，手动触发时取workflow_dispatch的参数
+          TM_DATA: ${{ github.event.client_payload.tm_data || github.event.inputs.tm_data }}
         run: |
-          curl -X POST -H "Content-Type: application/json" -d "{\"tm_data\":\"$TM_DATA\"}" http://localhost:3000/
+          echo "开始转发Trendminer数据..."
+          # 发送POST请求，增加日志输出
+          curl -X POST -H "Content-Type: application/json" -d "{\"tm_data\":\"$TM_DATA\"}" http://localhost:3000/ -v
